Fix Antenna Drag Cube Issue (Hopefully)

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Antenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Antenna.cfg
@@ -58,56 +58,36 @@ PART
 	//	Comms
 	//	============================================================================
 
-	MODULE:NEEDS[!RemoteTech]
+	MODULE
 	{
-		name = ModuleDeployableAntenna
-		showStatus = false
-		isTracking = false
-		pivotName = deploy
-		windResistance = 1
-		animationName = 1
-		isBreakable = False
-        extendActionName = Extend HGA
-        retractActionName = Retract HGA
-        extendpanelsActionName = Toggle HGA
+		name = ModuleAnimateGeneric
+		animationName = extend
+		isOneShot = false
+		startEventGUIName = Extend Antenna
+		endEventGUIName = Retract Antenna
+		actionGUIName = Toggle Antenna
+		allowAnimationWhileShielded = False
 	}
 
 	MODULE:NEEDS[!RemoteTech]
 	{
 		name = ModuleDataTransmitter
-		antennaType = DIRECT
+		antennaType = RELAY
 		packetInterval = 1.0
-		packetSize = 1.28
-		packetResourceCost = 0.01
+		packetSize = 2.0
+		packetResourceCost = 0.04
 		requiredResource = ElectricCharge
 		DeployFxModules = 0
-		antennaPower = 5750000000
+		antennaPower = 14400
 		antennaCombinable = True
-		antennaCombinableExponent = 1.0
-	}
-
-	MODULE:NEEDS[RemoteTech]
-	{
-		name = ModuleAnimateGeneric
-        animationName = deploy
-        isOneShot = False
-        startEventGUIName = Extend
-        endEventGUIName = Retract
-        actionGUIName = Toggle Antenna
-        actionAvailable = false
-        eventAvailableEditor = false
-        eventAvailableFlight = false
-        eventAvailableEVA = false
-        disableAfterPlaying = False
-        allowManualControl = false
-        allowAnimationWhileShielded = False
+		antennaCombinableExponent = 2.0
 	}
 
 	MODULE:NEEDS[RemoteTech]
     {
         name = ModuleSPUPassive
     }
-
+	
 	MODULE:NEEDS[RemoteTech]
     {
         name = ModuleRTAntenna
@@ -115,18 +95,16 @@ PART
         ActionMode1Name = Activate HGA
         IsRTActive = False
         Mode0DishRange = 0
-        Mode1DishRange = 75e6
-        DishAngle = 25
-        MaxQ = 6000
-        EnergyCost = 0.05
+        Mode1DishRange = 600000
+        DishAngle = 11.0
+        EnergyCost = 0.02
         DeployFxModules = 0
-        ProgressFxModules = 1
 
-        TRANSMITTER 
-		{
-            PacketInterval = 0.1
-            PacketSize = 1
-            PacketResourceCost = 0.01
+        TRANSMITTER
+        {
+            PacketInterval = 1.0
+            PacketSize = 2.048
+            PacketResourceCost = 0.02
         }
     }
 }
