--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAftBay.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAftBay.cfg
@@ -87,7 +87,7 @@ PART
 	MODULE
 	{
 		name = ModuleEnginesRF
-		transformName = thrustTransform
+		thrustVectorTransformName = thrustTransform
 		EngineType = SolidBooster
 		allowShutdown = False
 		throttleLocked = True
