Reformat & Tidy up Vostok Configs and fix up issues

--- a/GameData/ROCapsules/PartConfigs/Vostok/TU_Support_Vostok.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/TU_Support_Vostok.cfg
@@ -5,24 +5,28 @@
 KSP_MODEL_SHADER
 {
 	name = ROC-Vostok
+
 	model = ROCapsules/Assets/RN/vostok_dec
 	model = ROCapsules/Assets/RN/vostok_sc
 	model = ROCapsules/Assets/RN/voskhod_sc
 	model = ROCapsules/Assets/RN/vostok_tdu
 	model = ROCapsules/Assets/RN/vostok_para
 	model = ROCapsules/Assets/RN/voskhod_airlock
-	TEXTURE
+
+	MATERIAL
     {
-        shader = SSTU/PBR/Metallic
+        shader = TU/Metallic
 		
 		// Decoupler
 		mesh = TDU_TopAntenna
 		mesh = TDU_MConnector
+		
 		// Capsules
 		mesh = SC_Out
 		mesh = SC_HFOut
 		mesh = SC_HBOut
 		mesh = SC_CPanel
+		
 		// Service Module
 		mesh = TDU_SHolder1
         mesh = TDU_SHolder2
@@ -47,8 +51,10 @@ KSP_MODEL_SHADER
         mesh = TDU_Radiator3R.006
         mesh = TDU_Radiator3L.007
         mesh = TDU_Radiator3R.007
+		
 		// Parachute
 		mesh = cap
+		
 		// Airlock
 		mesh = airlock_base
         mesh = ribs
