--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokAntenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokAntenna.cfg
@@ -1,97 +1,72 @@
 PART
 {
-	module = Part
 	name = ROC-VostokAntenna
+	module = Part
 	author = Tantares, Pap
-	
+
 	RSSROConfig = true
-	RP0conf = true
-	
+
 	//  ============================================================================
 	//	Model and Dimensions
 	//  ============================================================================
-	
+
 	MODEL
 	{
 		model = ROCapsules/Assets/Tantares/Vostok/Vostok_Antenna_1
 		scale = 1.8491, 1.8491, 1.8491
 	}
-	
+
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,0,1
-	
-	bulkheadProfiles = srf
-		
+
 	//  ============================================================================
 	//	Title, Description, Category, Techs
 	//  ============================================================================
-	
-	title = (DEPRECATED) Vostok Hoop Antenna
-	manufacturer = OKB-1
-	description = Designed to communicate in LEO, this antenna is very primitive and simple. Maximum range of 1Mm.
-	
-	mass = 0.005
-	
-	category = Communication
-	subcategory = 0
-	
-	tags = vostok, gagarin, soviet, comms, communication, antenna
-	
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
-	
+	TechHidden = True
+	category = none
+	subcategory = 0
+	title = (DEPRECATED) Vostok Hoop Antenna
+	manufacturer = OKB-1
+	description = Designed to communicate in LEO, this antenna is very primitive and simple. Maximum range of 1Mm.
+	tags = vostok, gagarin, soviet, comms, communication, antenna
+
+	bulkheadProfiles = srf
+
 	//  ============================================================================
 	//	Thermo, Durability
 	//  ============================================================================
-		
+
+	mass = 0.005
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 2
 	crashTolerance = 8
+	breakingForce = 250
+	breakingTorque = 250
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
-	emissiveConstant = 0.4 // not too absorptive for reentry
-	thermalMassModifier = 2.0
-	
-	//  ============================================================================
-	//	Modules and Resources
-	//  ============================================================================
-	
-	
-	
-	//  ============================================================================
-	//	Comms
-	//  ============================================================================
-	
-	MODULE:NEEDS[!RemoteTech]
-	{
-		name = ModuleDataTransmitter
-		antennaType = DIRECT
-		packetInterval = 1.0
-		packetSize = 1.0
-		requiredResource = ElectricCharge
-		antennaPower = 400
-		packetResourceCost = 0.004
-	}
-	
-	MODULE:NEEDS[RemoteTech]
-	{
-		name = ModuleSPU
-	}
-	
-	MODULE:NEEDS[RemoteTech]
-    {
-        name = ModuleRTAntennaPassive
-        TechRequired = unlockParts
+	fuelCrossFeed = false
+}
 
-        OmniRange = 1000000
+//  ================================================================================
+//  Configure RealAntennas
+//  ================================================================================
 
-        TRANSMITTER
-        {
-            PacketInterval = 0.4
-            PacketSize = 0.27
-            PacketResourceCost = 0.025
-        }
-    }
+@PART[ROC-VostokAntenna]:BEFORE[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 1.0
+		RFBand = UHF		//Default to UHF-band
+	}
 }
