--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodRetroBooster.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodRetroBooster.cfg
@@ -1,73 +1,83 @@
 PART
 {
-	module = Part
 	name = ROC-VoskhodRetroBooster
+	module = Part
 	author = RaiderNick, Pap
-	
+
 	RSSROConfig = true
-	RP0conf = true
-	
+
 	//  ============================================================================
 	//	Model and Dimensions
 	//  ============================================================================
-	
+
 	MODEL
 	{
 		model = ROCapsules/Assets/RN/voskhod_retro
-		scale = 1.0, 1.0, 1.0
 	}
-	
+
 	scale = 1.0
 	rescaleFactor = 1.0
+
 	node_stack_bottom = 0.0, -0.42074, 0.0, 0.0, -1.0, 0.0, 0
-	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
+
 	attachRules = 1,0,1,1,0
-	
-	bulkheadProfiles = size0
-	
-	fx_exhaustFlame_yellow = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, running
-	fx_exhaustSparks_yellow = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, running
-	fx_smokeTrail_medium = 0.0, -4, 0.0, 0.0, 1.0, 0.0, running
-		
+
 	//  ============================================================================
 	//	Title, Description, Category, Techs
 	//  ============================================================================
-	
-	title = Voskhod Retro Package
-	manufacturer = OKB-1
-	description = Voskhod backup retro unit. Attach above the Voskhod Capsule on top of the Voskhod Retro Decoupler.
-	
-	mass = 0.056
-	
-	category = Engine
-	subcategory = 0
-	
-	tags = soviet, retro, booster, voskhod
-	
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
-	
-	stagingIcon = SOLID_BOOSTER
-	
+	category = Engine
+	subcategory = 0
+	title = Voskhod Retro Package
+	manufacturer = OKB-1
+	description = Voskhod backup retro unit. Attach above the Voskhod Capsule on top of the Voskhod Retro Decoupler.
+	tags = soviet, retro, booster, voskhod
+
+	bulkheadProfiles = size0
+
 	//  ============================================================================
 	//	Thermo, Durability
 	//  ============================================================================
-		
-	crashTolerance = 5
-	maxTemp = 2400
-	skinMaxTemp = 3600
-	
+
+	mass = 0.056
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 2
+	crashToerance = 5
+	breakingForce = 250
+	breakingTorque = 250
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
+	stagingIcon = SOLID_BOOSTER
+	fuelCrossFeed = True
+
 	//  ============================================================================
 	//	Modules and Resources
 	//  ============================================================================
-	
+
 	MODULE
 	{
 		name = ModuleEnginesRF
 		thrustVectorTransformName = thrustTransform
+		EngineType = SolidBooster
+		allowShutdown = False
+		throttleLocked = True
 	}
-	
+
+	MODULE
+	{
+		name = ModuleSurfaceFX
+		thrustProviderModuleIndex = 0
+		fxMax = 0.3
+		maxDistance = 30
+		falloff = 1.7
+		thrustTransformName = thrustTransform
+	}
+
 	MODULE
 	{
 		name = ModuleEngineConfigs
@@ -80,6 +90,11 @@ PART
 			minThrust = 117.7
 			maxThrust = 117.7
 			heatProduction = 100
+
+			ullage = False
+			pressureFed = False
+			ignitions = 0
+
 			PROPELLANT
 			{
 				name = HTPB
@@ -93,7 +108,7 @@ PART
 			}
 		}
 	}
-	
+
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -105,21 +120,39 @@ PART
 			name = HTPB
 			amount = 49.1525
 			maxAmount = 49.1525
+			isTweakable = False
 		}
 	}
-	
-	MODULE
-	{
-		name = ModuleSurfaceFX
-		thrustProviderModuleIndex = 0
-		fxMax = 0.3
-		maxDistance = 30
-		falloff = 1.7
-		thrustTransformName = thrustTransform
-	}
-	
-	//  ============================================================================
-	//	Animations and Textures
-	//  ============================================================================
-	
+}
+
+//  ================================================================================
+//  Configure RealPlume
+//  ================================================================================
+
+@PART[ROC-VoskhodRetroBooster]:FOR[RealPlume]:NEEDS[SmokeScreen]
+{
+    PLUME
+    {
+        name = Solid-Sepmotor
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,-0.05
+        fixedScale = 0.8
+        energy = 1
+        speed = 1
+    }
+
+    @MODULE[ModuleEngines*]
+    {
+        %powerEffectName = Solid-Sepmotor
+        !runningEffectName = DELETE
+    }
+
+    @MODULE[ModuleEngineConfigs]
+    {
+        @CONFIG,*
+        {
+            %powerEffectName = Solid-Sepmotor
+        }
+    }
 }
