--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
@@ -92,6 +92,12 @@ PART
 
 	MODULE
 	{
+		name = ModuleSAS
+		SASServiceLevel = 3
+	}
+
+	MODULE
+	{
 		name = ModuleScienceContainer
 		reviewActionName = Review Stored Data
 		storeActionName = Store Experiments
@@ -143,7 +149,6 @@ PART
 @PART[ROC-VoskhodCapsule]:BEFORE[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
-
 	MODULE
 	{
 		name = ModuleRealAntenna
