--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -26,7 +26,7 @@ PART
 	node_stack_bottom = -0.000, -1.12398,  0.000,  0.000, -1.000,  0.000, 2
 	node_stack_para = -0.81345, 0.2886,  0.000,  0.000, 1.000,  0.000, 1
 
-	CoMOffset = 0.0, -0.4,  0.0 
+	CoMOffset = 0.0, -0.4, 0.0	
 
 	attachRules = 1,0,1,1,0
 
@@ -90,6 +90,12 @@ PART
 
 	MODULE
 	{
+		name = ModuleSAS
+		SASServiceLevel = 3
+	}
+
+	MODULE
+	{
 		name = ModuleScienceContainer
 		reviewActionName = Review Stored Data
 		storeActionName = Store Experiments
@@ -141,7 +147,6 @@ PART
 @PART[ROC-VostokCapsule]:BEFORE[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
-
 	MODULE
 	{
 		name = ModuleRealAntenna
