--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
@@ -245,11 +245,10 @@ PART
 @PART[ROC-VostokService]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
-
 	MODULE
 	{
 		name = ModuleRealAntenna
-		referenceGain = 3.0 	//Estimated size, can't find any documentation
+		referenceGain = 2.0
 		RFBand = UHF		//Default to UHF-band
 	}
 }
