--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSAntenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSAntenna.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = SOYUZ_DockingAntenna
+	name = ROC-SoyuzDockingAntenna
 	module = Part
 	author = DECQ
 
@@ -13,7 +13,6 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/SoyuzMS/DOKING_ANTENNA
-		scale = 1.0, 1.0, 1.0
 	}
 
 	scale = 1.0
@@ -70,18 +69,19 @@ PART
 		retractActionName = Retract Antenna
 		extendpanelsActionName = Toggle Antenna
 	}
+}
 
+//  ================================================================================
+//	Configure RealAntennas
+//  ================================================================================
+
+@PART[ROC-SoyuzDockingAntenna]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
 	MODULE
 	{
-		name = ModuleDataTransmitter
-		antennaType = DIRECT
-		packetInterval = 0.6
-		packetSize = 2
-		packetResourceCost = 12.0
-		requiredResource = ElectricCharge
-		DeployFxModules = 0
-		antennaPower = 500000
-		antennaCombinable = True
-		antennaCombinableExponent = 1
+		name = ModuleRealAntenna
+		referenceGain = 0.5
+		RFBand = UHF		//Default to UHF-band
 	}
 }
