--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDockingPort.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSDockingPort.cfg
@@ -13,7 +13,6 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/SoyuzMS/SOYUZ_DOCKPORT
-		scale = 1.0, 1.0, 1.0
 	}
 
 	scale = 1.0
@@ -105,5 +104,20 @@ PART
 		endEventGUIName = Retract Probe
 		actionGUIName = Toggle Probe
 		allowAnimationWhileShielded = False
+	}
+}
+
+//  ================================================================================
+//	Configure RealAntennas
+//  ================================================================================
+
+@PART[ROC-SoyuzMSDockingPort]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 0.5
+		RFBand = UHF		//Default to UHF-band
 	}
 }
