--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSInternal.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSInternal.cfg
@@ -1,6 +1,10 @@
 INTERNAL
 {
 	name = ROC-SoyuzMSCapsuleInternal
+	MODEL
+	{
+		model = ROCapsules/Assets/DECQ/SoyuzMS/Internal/CAPSULE
+	}
 	MODULE
 	{
 		name = InternalSeat
