--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSOrbitalModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSOrbitalModule.cfg
@@ -13,7 +13,6 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/SoyuzMS/BO
-        scale = 1.0, 1.0, 1.0
 	}
 
 	INTERNAL
@@ -83,9 +82,9 @@ PART
 	MODULE
 	{
 		name = ModuleDecouple
+        menuName = Jettison Orbital Module
 		ejectionForce = 100
         isOmniDecoupler = False
-        menuName = Jettison Orbital Module
 		explosiveNodeID = bottom
 	}
 
@@ -112,10 +111,17 @@ PART
 		resourceAmount = 0.075
 		useResources = true
 	}
+}
 
-	MODULE
+//	==================================================
+//	TAC Life Support compatibility.
+//	==================================================
+
+@PART[ROC-SoyuzMSOM]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
+{
+    MODULE
     {
-        name = ModuleFuelTanks
+	    name = ModuleFuelTanks
         type = ServiceModule
         volume = 1930
         basemass = -1
@@ -155,4 +161,19 @@ PART
             maxAmount = 443.3
         }
     }
+}
+
+//  ================================================================================
+//	Configure RealAntennas
+//  ================================================================================
+
+@PART[ROC-SoyuzMSOM]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 0.5
+		RFBand = UHF		//Default to UHF-band
+	}
 }
