--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
@@ -13,7 +13,6 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/SoyuzMS/SA
-        scale = 1.0, 1.0, 1.0
 	}
 
 	INTERNAL
@@ -74,6 +73,41 @@ PART
     skinMassPerArea = 4
 
 	//	============================================================================
+	//	Animations and Textures
+	//	============================================================================
+
+	EFFECTS
+	{
+		rcs
+		{
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = DPO_M
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.02 0.1
+				volume = 0.5 0.1
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = DPO_M
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}
+	}
+
+	//	============================================================================
 	//	Modules and Resources
 	//	============================================================================
 
@@ -110,36 +144,42 @@ PART
 
 	MODULE
 	{
-		name = ModuleEngines
+		name = ModuleEnginesRF
 		thrustVectorTransformName = thrustTransform
-		powerEffectName = running
-		throttleLocked = True
-		exhaustDamage = True
-		ignitionThreshold = 0.1
-		minThrust = 30
-		maxThrust = 30
-		heatProduction = 100
-		useEngineResponseTime = False
-		engineAccelerationSpeed = 0.0
-		allowShutdown = False
-		fxOffset = 0, 0, 0.35
 		EngineType = SolidBooster
+		allowShutdown = False
+		throttleLocked = True
+		fxOffset = 0, 0, 0.35
+	}
 
-		%ullage = False
-		%pressureFed = False
-		%ignitions = 1
-
-		PROPELLANT
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		configuration = SoyuzMSRetro
+		modded = false
+		CONFIG
 		{
-			name = HTPB
-			ratio = 1.0
-			DrawGauge = True
-		}
+			name = SoyuzMSRetro
+			minThrust = 30
+			maxThrust = 30
+			heatProduction = 100
 
-		atmosphereCurve
-		{
-			key = 0 250
-			key = 1 230
+			ullage = False
+			pressureFed = False
+			ignitions = 1
+
+			PROPELLANT
+			{
+				name = HTPB
+				ratio = 1.0
+				DrawGauge = True
+			}
+			atmosphereCurve
+			{
+				key = 0 250
+				key = 1 230
+			}
 		}
 	}
 
@@ -178,13 +218,8 @@ PART
 
 	MODULE
 	{
-		name = ModuleJettison
-		jettisonName = Cylinder_079
-		bottomNodeName = top
-		isFairing = False
-		jettisonedObjectMass = 0.001
-		jettisonForce = 3
-		jettisonDirection = 3 0 0
+		name = ModuleB9DisableTransform
+		transform = Cylinder_079
 	}
 
 	MODULE:NEEDS[RasterPropMonitor]
@@ -197,7 +232,7 @@ PART
     {
 		name = ModuleFuelTanks
         type = ServiceModule
-        volume = 87
+        volume = 36
 		basemass = -1
         //  Avionics batteries 27 kWh.
         //  Supports the Soyuz SA for a free - flight duration of approximately 6 hours.
@@ -214,6 +249,25 @@ PART
             amount = 28
             maxAmount = 28
         }
+        TANK
+        {
+            name = HTPB
+            amount = 7
+            maxAmount = 7
+        }
+    }
+}
+
+//	==================================================
+//	TAC Life Support compatibility.
+//	==================================================
+
+@PART[ROC-SoyuzMSCapsule]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
+{
+    @MODULE[ModuleFuelTanks]
+    {
+		@volume += 51
+
         //  Food (6 hours).
         TANK
         {
@@ -249,138 +303,7 @@ PART
             amount = 0
             maxAmount = 3.7
         }
-        TANK
-        {
-            name = HTPB
-            amount = 7
-            maxAmount = 7
-        }
     }
-
-	//	============================================================================
-	//	Comms
-	//	============================================================================
-
-	MODULE:NEEDS[!RemoteTech]
-	{
-		name = ModuleDataTransmitter
-		antennaType = DIRECT
-		antennaPower = 64
-		antennaCombinable = True
-		antennaCombinableExponent = 2.0
-		packetInterval = 1.0
-		packetSize = 2.0
-		requiredResource = ElectricCharge
-		packetResourceCost = 0.04
-		DeployFxModules = 0
-	}
-
-	MODULE:NEEDS[RemoteTech]
-	{
-		name = ModuleSPU
-		IsRTCommandStation = False
-		RTCommandMinCrew = 0
-	}
-
-	MODULE:NEEDS[RemoteTech]
-	{
-		name = ModuleRTAntenna
-		ActionMode0Name = Deactivate Internal Antenna
-		ActionMode1Name = Activate Internal Antenna
-		IsRTActive = False
-		Mode0OmniRange = 0
-		Mode1OmniRange = 400000
-		EnergyCost = 0.02
-		DeployFxModules = 0
-
-		TRANSMITTER
-		{
-            PacketInterval = 0.4
-            PacketSize = 0.27
-            PacketResourceCost = 0.025
-		}
-	}
-
-	//	============================================================================
-	//	Animations and Textures
-	//	============================================================================
-
-	EFFECTS
-	{
-		rcs
-		{
-			AUDIO_MULTI_POOL
-			{
-				channel = Ship
-				transformName = DPO_M
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 0.02 0.1
-				volume = 0.5 0.1
-				volume = 1.0 0.1
-				pitch = 0.0 0.75
-				pitch = 1.0 1.5
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/Monoprop_small
-				transformName = DPO_M
-				emission = 0.0 0.0
-				emission = 0.1 0.0
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localRotation = -90, 0, 0
-			}
-		}
-		running
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_rocket_spurts
-				volume = 0.0 0.0
-				volume = 1.0 1.0
-				pitch = 0.0 0.2
-				pitch = 1.0 1.0
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/LES_Thruster
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.05 0.0
-				emission = 0.075 0.25
-				emission = 1.0 1.25
-				speed = 0.0 0.5
-				speed = 1.0 1.2
-			}
-		}
-		engage
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_vent_soft
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}
-		flameout
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_explosion_low
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}		
-	}
 }
 
 //  ================================================================================
@@ -396,4 +319,36 @@ PART
 		referenceGain = 2.0
 		RFBand = UHF		//Default to UHF-band
 	}
+}
+
+//  ================================================================================
+//  Configure RealPlume
+//  ================================================================================
+
+@PART[ROC-SoyuzMSCapsule]:FOR[RealPlume]:NEEDS[SmokeScreen]
+{
+    PLUME
+    {
+        name = Solid-Sepmotor
+        transformName = thrustTransform
+        localRotation = 0,0,0
+        localPosition = 0,0,-0.05
+        fixedScale = 0.8
+        energy = 1
+        speed = 1
+    }
+
+    @MODULE[ModuleEngines*]
+    {
+        %powerEffectName = Solid-Sepmotor
+        !runningEffectName = DELETE
+    }
+
+    @MODULE[ModuleEngineConfigs]
+    {
+        @CONFIG,*
+        {
+            %powerEffectName = Solid-Sepmotor
+        }
+    }
 }
