--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
@@ -13,7 +13,6 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/SoyuzMS/PAO
-        scale = 1.0, 1.0, 1.0
 	}
 
 	scale = 1.0
@@ -66,64 +65,136 @@ PART
 	childStageOffset = 1
 	radiatorHeadroom = 0.4427
 
+	//  ============================================================================
+	//  Animations and Textures
+	//  ============================================================================
+
+	EFFECTS
+	{
+		running1
+		{
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = thrustTransform
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.02 0.1
+				volume = 0.5 0.1
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_big
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}
+		control
+		{
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = DPO_B				
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.02 0.1
+				volume = 0.5 0.1
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = DPO_B
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}	
+		control1
+		{
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = DPO_M				
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.02 0.1
+				volume = 0.5 0.1
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = DPO_M
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}
+	}
+
 	//	============================================================================
 	//	Modules and Resources
 	//	============================================================================
 
-    MODULE
-    {
-        name = ModuleActiveRadiator
-        maxEnergyTransfer = 50.0
-        overcoolFactor = 0.4427
-        isCoreRadiator = True
-        parentCoolingOnly = False
 
-        RESOURCE
-        {
-            name = ElectricCharge
-            rate = 0.3
-        }
+	MODULE
+	{
+		name = ModuleEnginesRF
+		thrustVectorTransformName = thrustTransform
+		EngineType = LiquidFuel
+		engineID = SKD
+		runningEffectName = running1
+		fxOffset = 0, 0, 0.8
     }
 
 	MODULE
 	{
-		name = ModuleEnginesFX
-		thrustVectorTransformName = thrustTransform
-		engineID = SKD
-		powerEffectName = running
-		throttleLocked = False
-		exhaustDamage = True
-		ignitionThreshold = 0.1
-		minThrust = 2.95
-		maxThrust = 2.95
-		heatProduction = 1
-		fxOffset = 0, 0, 0.8
-		EngineType = LiquidFuel
+		name = ModuleSurfaceFX
+		thrustProviderModuleIndex = 0
+		fxMax = 0.75
+		maxDistance = 50
+		falloff = 1.8
+		thrustTransformName = thrustTransform
+	}
 
-		%ullage = True
-		%pressureFed = True
-		%ignitions = 30
+	MODULE
+	{
+		name = FXModuleAnimateThrottle
+		animationName = 1EMISS
+		responseSpeed = 0.3
+		dependOnEngineState = True
+		dependOnThrottle = True
+	}
 
-		PROPELLANT
-		{
-			name = UDMH
-			resourceFlowMode = NO_FLOW
-			ratio = 0.4977
-			DrawGauge = True
-		}
-
-        PROPELLANT
-        {
-            name = NTO
-            ratio = 0.5023
-            DrawGauge = False
-        }
-
-        atmosphereCurve
-        {
-            key = 0 302
-            key = 1 100
-        }
+    MODULE
+    {
+        name = ModuleGimbal
+        gimbalTransform = thrustTransform
+        gimbalRange = 5.0
+        useGimbalResponseSpeec = True
+        gimbalResponseSpeed = 16
     }
 
 	MODULE:NEEDS[!ROEngines]
@@ -154,31 +225,47 @@ PART
 
     MODULE
     {
-        name = ModuleGimbal
-        gimbalTransform = thrustTransform
-        gimbalRange = 5.0
-        useGimbalResponseSpeec = True
-        gimbalResponseSpeed = 16
+        name = ModuleEngineConfigs
+        type = ModuleEngines
+        configuration = S5.80
+
+        CONFIG
+        {
+            name = S5.80
+            minThrust = 2.95
+            maxThrust = 2.95
+            heatProduction = 1
+            ullage = True
+            pressureFed = True
+            ignitions = 30
+
+            IGNITOR_RESOURCE
+            {
+                name = ElectricCharge
+                amount = 0.1
+            }
+
+            PROPELLANT
+            {
+                name = UDMH
+                ratio = 0.4977
+                DrawGauge = True
+            }
+
+            PROPELLANT
+            {
+                name = NTO
+                ratio = 0.5023
+                DrawGauge = False
+            }
+
+            atmosphereCurve
+            {
+                key = 0 302
+                key = 1 100
+            }
+        }
     }
-
-	MODULE
-	{
-		name = ModuleSurfaceFX
-		thrustProviderModuleIndex = 0
-		fxMax = 0.75
-		maxDistance = 50
-		falloff = 1.8
-		thrustTransformName = thrustTransform
-	}
-
-	MODULE
-	{
-		name = FXModuleAnimateThrottle
-		animationName = 1EMISS
-		responseSpeed = 0.3
-		dependOnEngineState = True
-		dependOnThrottle = True
-	}
 
 	MODULE
 	{
@@ -240,50 +327,6 @@ PART
 
     MODULE
     {
-        name = ModuleEngineConfigs
-        type = ModuleEngines
-        configuration = S5.80
-
-        CONFIG
-        {
-            name = S5.80
-            minThrust = 2.95
-            maxThrust = 2.95
-            heatProduction = 1
-            ullage = True
-            pressureFed = True
-            ignitions = 30
-
-            IGNITOR_RESOURCE
-            {
-                name = ElectricCharge
-                amount = 0.1
-            }
-
-            PROPELLANT
-            {
-                name = UDMH
-                ratio = 0.4977
-                DrawGauge = True
-            }
-
-            PROPELLANT
-            {
-                name = NTO
-                ratio = 0.5023
-                DrawGauge = False
-            }
-
-            atmosphereCurve
-            {
-                key = 0 302
-                key = 1 100
-            }
-        }
-    }
-
-    MODULE
-    {
         name = ModuleFuelTanks
         type = ServiceModule
         volume = 880
@@ -311,117 +354,18 @@ PART
         }
     }
 
-	//  ============================================================================
-	//  Animations and Textures
-	//  ============================================================================
+    MODULE
+    {
+        name = ModuleActiveRadiator
+        maxEnergyTransfer = 50.0
+        overcoolFactor = 0.4427
+        isCoreRadiator = True
+        parentCoolingOnly = False
 
-	EFFECTS
-	{
-		running
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 1.0 0.5
-				pitch = 0.0 0.5
-				pitch = 1.0 1.0
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/Monoprop_big
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.4 0.8
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				//localOffset = 0, 0, 1
-			}
-		}
-		engage
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_vent_soft
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}
-		flameout
-		{
-			PREFAB_PARTICLE
-			{
-				prefabName = fx_exhaustSparks_flameout_2
-				transformName = FXTransform
-				oneShot = true
-			}
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_explosion_low
-				volume = 1.0
-				pitch = 2.0
-				loop = false
-			}
-		}
-		control
-		{
-			AUDIO_MULTI_POOL
-			{
-				channel = Ship
-				transformName = DPO_B				
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 0.02 0.1
-				volume = 0.5 0.1
-				volume = 1.0 0.1
-				pitch = 0.0 0.75
-				pitch = 1.0 1.5
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/Monoprop_small
-				transformName = DPO_B
-				emission = 0.0 0.0
-				emission = 0.1 0.0
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localRotation = -90, 0, 0
-			}
-		}	
-		control1
-		{
-			AUDIO_MULTI_POOL
-			{
-				channel = Ship
-				transformName = DPO_M				
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 0.02 0.1
-				volume = 0.5 0.1
-				volume = 1.0 0.1
-				pitch = 0.0 0.75
-				pitch = 1.0 1.5
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/Monoprop_small
-				transformName = DPO_M
-				emission = 0.0 0.0
-				emission = 0.1 0.0
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localRotation = -90, 0, 0
-			}
-		}
-	}
+        RESOURCE
+        {
+            name = ElectricCharge
+            rate = 0.3
+        }
+    }
 }
