Fix Formatting, Fix ApolloCMBlockIII+.cfg Heatshield.

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
@@ -1,7 +1,7 @@
 PART
 {
-	module = Part
 	name = ROC-ApolloEngineBlockIII
+	module = Part
 	author = CobaltWolf
 
 	category = Engine
@@ -16,9 +16,11 @@ PART
 	breakingForce = 10000
 	breakingTorque = 10000
 
-	//  ============================================================================
-	//	Update Below
-	//  ============================================================================
+	engineType = LMAE
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
 
 	MODEL
 	{
@@ -28,15 +30,29 @@ PART
 
 	scale = 1
 	rescaleFactor = 1.6047
+
 	node_stack_top = 0.0, 0.038, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_top2 = 0.0, 0.038, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_bottom = 0.0, -0.84, 0.0, 0.0, -1.0, 0.0, 2
+
 	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
 
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	title = Apollo Block III Service Engine (LMAE)
 	manufacturer = Bell / Rocketdyne
 	description = With the decreased weight and LEO operation design, there was no longer a need for a large engine to power the CSM. NASA decided to reuse the successful Lunar Module Ascent Engine. FICTIONAL (Eyes Turned Skyward)
+	tags = apollo, block-III, block-3, lmae, eyes turned skyward
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
 
 	heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
@@ -45,17 +61,13 @@ PART
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-
-	tags = apollo, block-III, block-3, lmae, eyes turned skyward
-
-	engineType = LMAE
 	stagingIcon = LIQUID_ENGINE
 	stageOffset = 1
 	childStageOffset = 1
 
-	TechRequired = unlockParts
-	cost = 150
-	entryCost = 1
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
 
 	MODULE
 	{
