--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockV.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockV.cfg
@@ -1,7 +1,7 @@
 PART
 {
-	module = Part
 	name = ROC-ApolloEngineBlockV
+	module = Part
 	author = CobaltWolf
 
 	category = Engine
@@ -16,9 +16,11 @@ PART
 	breakingForce = 10000
 	breakingTorque = 10000
 
-	//  ============================================================================
-	//	Update Below
-	//  ============================================================================
+	engineType = LMDE
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
 
 	MODEL
 	{
@@ -28,15 +30,29 @@ PART
 
 	scale = 1
 	rescaleFactor = 1.6047
+
 	node_stack_top = 0.0, 0.038, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_top2 = 0.0, 0.038, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_bottom = 0.0, -1.046, 0.0, 0.0, -1.0, 0.0, 2
+
 	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
 
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	title = Apollo Block V Service Engine (TR-201)
 	manufacturer = TRW
 	description = Deeply throttleable pressure-fed vacuum engine used for the descent module of the Apollo lunar lander. Uses storable propellants which are not subject to boil-off, but are far less efficient than hydrolox or even kerolox. The later variant (TR-201) was used on Delta as an upper stage engine (on Delta P series); this was a low-cost model with more restarts (4 instead of 2) and slightly higher thrust but lower efficiency and no throttling capability. In the alternate Eyes Turned Skyward universe it was used for the Apollo Block V Service Module. FICTIONAL (Eyes Turned Skyward)
+	tags = apollo, block-V, block-5, tr-201, eyes turned skyward
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
 
 	heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
@@ -45,17 +61,13 @@ PART
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-
-	tags = apollo, block-V, block-5, tr-201, eyes turned skyward
-
-	engineType = LMDE
 	stagingIcon = LIQUID_ENGINE
 	stageOffset = 1
 	childStageOffset = 1
 
-	TechRequired = unlockParts
-	cost = 150
-	entryCost = 1
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
 
 	MODULE
 	{
