--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSMBlockIII+.cfg
@@ -4,20 +4,32 @@ PART
 	module = Part
 	author = CobaltWolf
 
+	RSSROConfig = True
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_ServiceModule
 		rotation = 0.0, -90.0, 0.0
 	}
 
-	RSSROConfig = True
 	scale = 1
 	rescaleFactor = 1.6047
 
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
 	node_stack_top = 0.0, 0.64, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -0.64, 0.0, 0.0, -1.0, 0.0, 2
+
+	attachRules = 1,0,1,1,0
+
 	CoMOffset = 0.0, -0.6, 0.0
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
 
 	TechRequired = unlockParts
 	entryCost = 1
@@ -27,7 +39,14 @@ PART
 	title = Apollo Block III+ Service Module
 	manufacturer = North American Rockwell
 	description = Significant changes were made to better adapt Apollo to its new role as a crew shuttle for LEO and the Service Module was decreased in size and weight. FICTIONAL (Eyes Turned Skyward)
-	attachRules = 1,0,1,1,0
+	tags = apollo, block-III, block-3, eyes turned skyward
+
+	bulkheadProfiles = size2
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 1.2377
 	dragModelType = default
 	maximum_drag = 0.2
@@ -38,9 +57,10 @@ PART
 	breakingTorque = 250
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
-	bulkheadProfiles = size2
 
-	tags = apollo, block-III, block-3, eyes turned skyward
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
 
 	MODULE
 	{
