--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
@@ -1,22 +1,22 @@
 PART
 {
-	module = Part
 	name = ROC-ApolloCMBlockIII
+	module = Part
 	author = DECQ, Pap, capkirk
-	
+
 	RSSROConfig = true
-	
+
 	//	============================================================================
 	//	Model and Dimensions
 	//	============================================================================
-	
+
 	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/Apollo/CM
 		scale = 1.0, 1.0, 1.0
 		rotation = 0, 180, 0
 	}
-	
+
 	MODEL // Model for the Drogue Parachute Decoupler
 	{
 		model = ROCapsules/Assets/DECQ/Apollo/DrogueParaDec
@@ -24,108 +24,109 @@ PART
 		position = 0.0, 1.15, 0.33
 		rotation = 0.0, 180.0, 0.0
 	}
-	
+
 	MODEL // Model for the Heat Shield
 	{
 		model = ROCapsules/Assets/DECQ/Apollo/HeatShield
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, -0.713, 0.0
 	}
-	
-	scale = 1.0
-	rescaleFactor = 1.0
-	
-	node_stack_top = 0.0, 0.87, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_para = 0.0, 0.87, 0.0, 0.0, -1.0, 0.0, 1
-	node_stack_para2 = 0.0, 1.165, -0.58, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -1.24, 0.0, 0.0, -1.0, 0.0, 2
-	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-	attachRules = 1,0,1,1,0
-	
-	bulkheadProfiles = size1, size2
-	
-	CoMOffset = 0.0, -0.25, 0.0
-		
-	//	============================================================================
-	//	Title, Description, Category, Techs
-	//	============================================================================
-	
-	title = Apollo Block III+ Command Module (CM)
-	manufacturer = Rockwell International
-	description = Significant changes were made to better adapt Apollo to its new role as a crew shuttle for LEO, and the internal volume was modified to fit 5 crew for reentry. Be sure to bring extra living space by attaching the Mission Module to dock with after orbiting. By only using the Command Module, you will have resources for 5 crew for 72 hours. FICTIONAL (Eyes Turned Skyward)
-	
-	mass = 4.385
-	
-	category = Pods
-	subcategory = 0
-	
-	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
-	
-	TechRequired = improvedCapsules
-	cost = 150
-	entryCost = 1
-	
-	vesselType = Ship
-	stagingIcon = COMMAND_POD
-	CrewCapacity = 5
-	
+
 	INTERNAL
 	{
 		name = ApolloCM_Internal
 	}
-	
+
+	scale = 1.0
+	rescaleFactor = 1.0
+
+	node_stack_top = 0.0, 0.87, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_para = 0.0, 0.87, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_para2 = 0.0, 1.165, -0.58, 0.0, 1.0, 0.0, 1
+	node_stack_bottom = 0.0, -1.24, 0.0, 0.0, -1.0, 0.0, 2
+
+	attachRules = 1,0,1,1,0
+
+	CoMOffset = 0.0, -0.25, 0.0
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
+	TechRequired = improvedCapsules
+	cost = 150
+	entryCost = 1
+	category = Pods
+	subcategory = 0
+	title = Apollo Block III+ Command Module (CM)
+	manufacturer = Rockwell International
+	description = Significant changes were made to better adapt Apollo to its new role as a crew shuttle for LEO, and the internal volume was modified to fit 5 crew for reentry. Be sure to bring extra living space by attaching the Mission Module to dock with after orbiting. By only using the Command Module, you will have resources for 5 crew for 72 hours. FICTIONAL (Eyes Turned Skyward)
+	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
+
+	vesselType = Ship
+	stagingIcon = COMMAND_POD
+	CrewCapacity = 5
+	bulkheadProfiles = size1, size2
+
 	//	============================================================================
 	//	Thermo, Durability
 	//	============================================================================
-		
+
+	mass = 4.385
 	crashTolerance = 8
 	maxTemp = 973.15
-	emissiveConstant = 0.6 // not too absorptive for reentry
-	thermalMassModifier = 1.0
-	skinMassPerArea = 2.0
 	buoyancy = 1.1
 	breakingForce = 250
 	breakingTorque = 250
-	
 	fuelCrossfeed = true
-	
-	MODULE
+
+	heatShieldDiameter  = 3.91
+	heatShieldTag = Lunar
+	resetHeatShieldAblator = true
+	resetHeatShieldMass = false
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
+
+	//	============================================================================
+	//	Animations and Textures
+	//	============================================================================
+
+	EFFECTS
 	{
-		name = ModuleColorChanger
-		moduleID = HeatShieldCharAnim
-		shaderProperty = _BurnColor
-		useRate = False
-		toggleInEditor = False
-		toggleInFlight = False
-
-		redCurve
+		running
 		{
-			key = 0 0
-			key = 1 1
-		}
-
-		greenCurve
-		{
-			key = 0 0
-			key = 1 1
-		}
-
-		blueCurve
-		{
-			key = 0 0
-			key = 1 1
-		}
-
-		alphaCurve
-		{
-			key = 0 0.8
-		}
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = RCSthruster
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.02 0.1
+				volume = 0.5 0.1
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = RCSthruster
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}		
 	}
-	
+
 	//	============================================================================
 	//	Modules and Resources
 	//	============================================================================
-	
+
 	MODULE
 	{
 		name = ModuleCommand
@@ -136,7 +137,7 @@ PART
 			rate = 1.52
 		}
 	}
-	
+
 	MODULE
 	{
 		name = ModuleSAS
@@ -156,7 +157,7 @@ PART
 		storeActionName = Store Experiments
 		storageRange = 2.0
 	}
-	
+
 	MODULE
 	{
 		name = ModuleAnimateGeneric
@@ -166,7 +167,7 @@ PART
 		actionGUIName = Toggle Lights
 		defaultActionGroup = Light
 	}
-	
+
 	MODULE
 	{
 		name = ModuleLiftingSurface
@@ -181,183 +182,7 @@ PART
 		nodeEnabled = True
 		attachNodeName = bottom
 	}
-	
-	MODULE:NEEDS[RasterPropMonitor]
-	{
-		name = RasterPropMonitorComputer
-		RPM_COLOROVERRIDE
-		{			
-			// NASA gauge ----------------------------------------------
-			COLORDEFINITION
-			{
-				name = ASET_NASAGAUGESCALE_ACTIVECOLOR
-				color= 144,139,118,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NASAGAUGEHAND_ACTIVECOLOR
-				color= 184,179,148,255
-			}
-			
-			// ASET aircraft instruments -----------------------------
-			// round gauge backlight
-			COLORDEFINITION
-			{
-				name = ASET_AIRCRAFTGAUGESCALE_ACTIVECOLOR //light on
-				color = 144,139,118,255
-			}
-		   
-			COLORDEFINITION
-			{
-				name = ASET_AIRCRAFTGAUGEHAND_ACTIVECOLOR //light on
-				color =184,179,148,255
-			}
-			
-			// switchers -------------------------------------------------
-			COLORDEFINITION
-			{
-				name = ASET_SWITCHER_NAME_POSITIVECOLOR
-				color= 184,179,158,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_SWITCHER_STATE_POSITIVECOLOR
-				color= 154,149,118,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_SWITCHER_BORDER_POSITIVECOLOR
-				color= 134,129,98,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_SWITCHER_MARK_POSITIVECOLOR
-				color= 194,189,158,255
-			}
-			
-			// LEDs off
-			COLORDEFINITION
-			{
-				name = ASET_SWITCHER_LEDS_POSITIVECOLOR
-				color= 0,0,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_SWITCHER_LEDS_ZEROCOLOR
-				color= 0,0,0,255
-			}
-			
-			// Numeric Input display ---------------------------------------
-			// background			
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_DIFFUSE_ACTIVECOLOR
-				color= 0,0,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_DIFFUSE_PASSIVECOLOR
-				color= 0,40,0,255
-			}
-			
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_EMISSIVE_ACTIVECOLOR
-				color= 0,40,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_EMISSIVE_PASSIVECOLOR
-				color= 0,0,0,255
-			}
-			// readout
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_POSITIVECOLOR
-				color= 0,255,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_ZEROCOLOR
-				color= 0,55,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_NEGATIVECOLOR 
-				color= 0,0,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_GHOSTCOLOR
-				color= 0,255,0,90
-			}
-			
-			// digital indicator --------------------------------
-			// readout
-			COLORDEFINITION
-			{
-				name = ASET_DIGITALINDICATOR_NORMAL_COLOR
-				color= 0,255,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_DIGITALINDICATOR_WARNING_COLOR
-				color= 0,255,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_DIGITALINDICATOR_STBY_COLOR
-				color= 0,255,0,120
-			}			
-			// legend
-			COLORDEFINITION
-			{
-				name = ASET_DIGITALINDICATOR_LEGEND_NORMAL_COLOR
-				color= 0,255,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_DIGITALINDICATOR_LEGEND_STBY_COLOR
-				color= 0,255,0,120
-			}
-			
-			// label plate ---------------------------------------------
-			// background
-			COLORDEFINITION
-			{
-				name = ASET_PLATEBKG_DIFFUSE_PASSIVECOLOR
-				color= 80,80,80,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_PLATEBKG_DIFFUSE_ACTIVECOLOR
-				color= 80,80,80,255
-			}
-			
-			COLORDEFINITION
-			{
-				name = ASET_PLATEBKG_EMISSIVE_PASSIVECOLOR
-				color= 0,0,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_PLATEBKG_EMISSIVE_ACTIVECOLOR
-				color= 0,0,0,255
-			}
-			// label text
-			COLORDEFINITION
-			{
-				name = ASET_PLATETEXT_POSITIVECOLOR
-				color= 174,169,138,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_PLATETEXT_ZEROCOLOR
-				color= 255,255,255,255
-			}			
-		}
-	}
-	
+
 	MODULE
 	{
 		name = ModuleRCSFX
@@ -365,7 +190,7 @@ PART
 		thrusterTransformName = RCSthruster
 		thrusterPower = 0.411
 		runningEffectName = running
-		
+
 		PROPELLANT
 		{
 			name = MMH
@@ -384,7 +209,7 @@ PART
 			ratio = 10.0
 			ignoreForIsp = True
 		}
-		
+
 		atmosphereCurve
 		{
 			key = 0 274
@@ -392,14 +217,14 @@ PART
 			key = 4 0.001
 		}
 	}
-	
+
 	MODULE:NEEDS[ConnectedLivingSpace]
 	{
 		name = ModuleConnectedLivingSpace
 		passable = true
 		impassablenodes = para, para2, bottom
 	}
-	
+
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -441,59 +266,6 @@ PART
 			maxAmount = 1010
 		}
 	}
-	
-	//	============================================================================
-	//	Animations and Textures
-	//	============================================================================
-	
-	EFFECTS
-	{
-		running
-		{
-			AUDIO_MULTI_POOL
-			{
-				channel = Ship
-				transformName = RCSthruster
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 0.02 0.1
-				volume = 0.5 0.1
-				volume = 1.0 0.1
-				pitch = 0.0 0.75
-				pitch = 1.0 1.5
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/Monoprop_small
-				transformName = RCSthruster
-				emission = 0.0 0.0
-				emission = 0.1 0.0
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localRotation = -90, 0, 0
-			}
-		}		
-	}
-}
-
-// Let RO Heatshield configure defaults
-@PART[ROC-ApolloCMBlockIII]:BEFORE[RealismOverhaul_HeatShield]
-{
-    heatShieldDiameter  = 3.91      // Previous Ablator = 848 corresponds to 3.68 diameter Lunar RO formula
-    heatShieldTag = Lunar
-    resetHeatShieldAblator = true
-}
-// Specific adjustments after default setup
-@PART[ROC-ApolloCMBlockIII]:AFTER[RealismOverhaul_HeatShield]
-{
-    @MODULE[ModuleAblator]
-    {
-        charModuleName = HeatShieldCharAnim
-        charMin = 0
-        charMax = 1
-    }
 }
 
 //	================================================================================
@@ -601,6 +373,191 @@ PART
 	}
 }
 
+//	================================================================================
+//	Add RasterPropMonitorComputer Module
+//	================================================================================
+
+@PART[ROC-ApolloCMBlockIII]:NEEDS[RasterPropMonitor]
+{
+	MODULE
+	{
+		name = RasterPropMonitorComputer
+		RPM_COLOROVERRIDE
+		{			
+			// NASA gauge ----------------------------------------------
+			COLORDEFINITION
+			{
+				name = ASET_NASAGAUGESCALE_ACTIVECOLOR
+				color= 144,139,118,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NASAGAUGEHAND_ACTIVECOLOR
+				color= 184,179,148,255
+			}
+
+			// ASET aircraft instruments -----------------------------
+			// round gauge backlight
+			COLORDEFINITION
+			{
+				name = ASET_AIRCRAFTGAUGESCALE_ACTIVECOLOR //light on
+				color = 144,139,118,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_AIRCRAFTGAUGEHAND_ACTIVECOLOR //light on
+				color =184,179,148,255
+			}
+
+			// switchers -------------------------------------------------
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_NAME_POSITIVECOLOR
+				color= 184,179,158,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_STATE_POSITIVECOLOR
+				color= 154,149,118,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_BORDER_POSITIVECOLOR
+				color= 134,129,98,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_MARK_POSITIVECOLOR
+				color= 194,189,158,255
+			}
+
+			// LEDs off
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_LEDS_POSITIVECOLOR
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_LEDS_ZEROCOLOR
+				color= 0,0,0,255
+			}
+
+			// Numeric Input display ---------------------------------------
+			// background			
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_DIFFUSE_ACTIVECOLOR
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_DIFFUSE_PASSIVECOLOR
+				color= 0,40,0,255
+			}
+			
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_EMISSIVE_ACTIVECOLOR
+				color= 0,40,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_EMISSIVE_PASSIVECOLOR
+				color= 0,0,0,255
+			}
+
+			// readout
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_POSITIVECOLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_ZEROCOLOR
+				color= 0,55,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_NEGATIVECOLOR 
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_GHOSTCOLOR
+				color= 0,255,0,90
+			}
+
+			// digital indicator --------------------------------
+			// readout
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_NORMAL_COLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_WARNING_COLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_STBY_COLOR
+				color= 0,255,0,120
+			}
+			
+			// legend
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_LEGEND_NORMAL_COLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_LEGEND_STBY_COLOR
+				color= 0,255,0,120
+			}
+
+			// label plate ---------------------------------------------
+			// background
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_DIFFUSE_PASSIVECOLOR
+				color= 80,80,80,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_DIFFUSE_ACTIVECOLOR
+				color= 80,80,80,255
+			}
+			
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_EMISSIVE_PASSIVECOLOR
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_EMISSIVE_ACTIVECOLOR
+				color= 0,0,0,255
+			}
+
+			// label text
+			COLORDEFINITION
+			{
+				name = ASET_PLATETEXT_POSITIVECOLOR
+				color= 174,169,138,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATETEXT_ZEROCOLOR
+				color= 255,255,255,255
+			}			
+		}
+	}
+}
+
 //  ================================================================================
 //	Configure RealAntennas
 //  ================================================================================
@@ -616,13 +573,4 @@ PART
 		referenceGain = 3.0		//Guess based on Block II
 		RFBand = S		//Default to S-band
 	}
-}
-
-//	================================================================================
-//	Final Pass to Make Sure TAC does not add extra resources
-//	================================================================================
-
-@PART[ROC-ApolloCMBlockIII]:LAST[ROCapsules]
-{
-	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
 }
