--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
@@ -3,17 +3,30 @@ PART
 	name = ROC-ApolloHGABlockIII
 	module = Part
 	author = CobaltWolf, capkirk
-	
+
+	RSSROConfig = True
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_HGA
 		rotation = 0.0, -60.0, 0.0
 	}
-	
-	RSSROConfig = True
+
 	scale = 1
 	rescaleFactor = 1.5646
+
 	node_attach = 0.0, 0.04, 0.0, 0.0, 1.0 , 0.0
+
+	attachRules = 1,1,0,0,1
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
 	TechRequired = improvedCapsules
 	entryCost = 1500
 	cost = 1000
@@ -21,8 +34,15 @@ PART
 	subcategory = 0
 	title = Apollo Block III High Gain Antenna
 	manufacturer = Rockwell International
-	description = A collapsable relay antenna. Intended to be placed on the mounting bracket of the Apollo Service Engine Block III. FICTIONAL (Eyes Turned Skyward)
-	attachRules = 1,1,0,0,1
+	description = A collapsable relay antenna. Intended to be placed on the mounting bracket of the Apollo Service Engine Block III. FICTIONAL (Eyes Turned Skyward)=
+	tags = apollo, block-III, block-3, eyes turned skyward
+
+	bulkheadProfiles = srf
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 0.01
 	dragModelType = default
 	maximum_drag = 0.2
@@ -32,10 +52,11 @@ PART
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
 	PhysicsSignificance = 1
-	bulkheadProfiles = srf
-	
-	tags = apollo, block-III, block-3, eyes turned skyward
-	
+
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
 	MODULE
 	{
 		name = ModuleAnimateGeneric
