--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSolar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSolar.cfg
@@ -3,13 +3,28 @@ PART
 	name = ROC-ApolloSolarBlockV
 	module = Part
 	author = CobaltWolf, capkirk
+
+	RSSROConfig = True
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block5_SolarPanels
 	}
-	RSSROConfig = True
+
 	rescaleFactor = 1.5646
+
 	node_attach = 0.0, 0.038, 0.0, 0.0, 1.0, 0.0
+
+	attachRules = 0,1,0,0,1
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
 	TechRequired = spaceStationSolarPanels
 	entryCost = 3800
 	cost = 2000
@@ -18,7 +33,14 @@ PART
 	title = Apollo Block V Solar Array
 	manufacturer = Boeing
 	description = Extendable sun-tracking Level 3 solar panel used for the Block V Apollo CSM. 8.05m^2. FICTIONAL (Eyes Turned Skyward)
-	attachRules = 0,1,0,0,1
+	tags = apollo, block-V, block-5, eyes turned skyward
+
+	bulkheadProfiles = srf
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 0.04669
 	dragModelType = default
 	maximum_drag = 0.2
@@ -27,13 +49,14 @@ PART
 	crashTolerance = 8
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
-	bulkheadProfiles = srf
 	thermalMassModifier = 2.0
 	emissiveConstant = 0.95
 	heatConductivity = 0.04 // 1/3 the default
 
-	tags = apollo, block-V, block-5, eyes turned skyward
-	
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
 	MODULE
 	{
 		name = ModuleDeployableSolarPanel
@@ -44,10 +67,10 @@ PART
 		raycastTransformName = sunCatcher
 		pivotName = pivot
 	}
-	
+
 	useSolarConfig = true
 	solarUseMass = true
-	
+
 	SolarConfig
 	{
 		area = 8.05
