--- a/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
@@ -1,34 +1,33 @@
-//	==================================================
-//	Sources:
-
-//	Boeing - Design Considerations for a Commercial Crew Transportation System: http://www.boeing.com/assets/pdf/defense-space/space/ccts/docs/Space_2011_Boeing.pdf
-//	Boeing - CST-100 Commercial Crew Transportation System overview:			http://www.boeing.com/assets/pdf/defense-space/space/ccts/docs/CCDev2%20Boeing%20CST-100%20Overview.pdf
-
-//	==================================================
-//	CST-100 command module.
-
-//	Dimensions: 4.65 m x 2.6 m
-//	Gross Mass: 4500 Kg
-//	==================================================
-
 PART
 {
 	name = ROC-CSTCM
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
+
 	RSSROConfig = True
-	
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/commandModule/model
 	}
-	
+
+	INTERNAL
+	{
+		name = CST100internal
+	}
+
 	scale = 1
 	rescaleFactor = 1.24
-	
+
 	node_stack_bottom = 0.0, -0.9 , 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_top = 0.0, 1.28, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_parachute = 0.0, 0.78775, 0.0, 0.0, 1.0, 0.0, 2
+
+	attachRules = 1,0,1,1,0
 
 	CoPOffset = 0.0, 0.5, 0.0
 	CoLOffset = 0.0, -0.45, 0.0
@@ -36,7 +35,11 @@ PART
 
 	buoyancy = 1.5
 	buoyancyUseSine = False
-	
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
@@ -45,8 +48,16 @@ PART
 	title = CST-100 Command Module
 	manufacturer = Boeing
 	description = The command module of the CST-100 "Starliner" Commercial Crew Transportation System (COTS). Designed to be reusable for up to 10 times.
-	attachRules = 1,0,1,1,0
-	
+	tags = starliner, boeing, cst100, cst-100, 100
+
+	vesselType = Ship
+	CrewCapacity = 7
+	bulkheadProfiles = size3, size1
+
+	//  ============================================================================
+	//  Thermo, Durability
+	//  ============================================================================
+
 	mass = 4.35
 	dragModelType = default
 	breakingForce = 250
@@ -60,12 +71,11 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
-	vesselType = Ship
-	CrewCapacity = 7
-	bulkheadProfiles = size3, size1
-	
-	tags = starliner, boeing, cst100, cst-100, 100
-	
+
+	//  ============================================================================
+	//  Animations and Textures
+	//  ============================================================================
+
 	EFFECTS
 	{
 		rcs
@@ -96,12 +106,11 @@ PART
 			}
 		}
 	}
-	
-	INTERNAL
-	{
-		name = CST100internal
-	}
-	
+
+	//  ============================================================================
+	//  Modules and Resources
+	//  ============================================================================
+
 	MODULE
 	{
 		name = ModuleCommand
@@ -115,19 +124,19 @@ PART
 			rate = 1.6
 		}
 	}
-	
+
 	MODULE
 	{
 		name = ModuleSAS
 		SASServiceLevel = 3
 	}
-	
+
 	MODULE
 	{
 		name = AdjustableCoMShifter
 		DescentModeCoM = 0.0, 0.0, -0.3
 	}
-	
+
 	MODULE
 	{
 		name = ModuleScienceExperiment
@@ -143,7 +152,7 @@ PART
 		usageReqMaskInternal = 5
 		usageReqMaskExternal = -1
 	}
-	
+
 	MODULE
 	{
 		name = ModuleScienceContainer
@@ -152,7 +161,7 @@ PART
 		evaOnlyStorage = True
 		storageRange = 2.5
 	}
-	
+
 	MODULE
 	{
 		name = ModuleRCSFX
@@ -181,7 +190,7 @@ PART
 			key = 1 82
 		}
 	}
-	
+
 	MODULE
 	{
 		name = ModuleFuelTanks
