--- a/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
@@ -3,7 +3,12 @@ PART
 	name = ROC-CSTHS
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
+
 	RSSROConfig = True
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
 
 	MODEL
 	{
@@ -16,7 +21,13 @@ PART
 	node_stack_bottom = 0.0, -0.3 , 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_top = 0.0, -0.041 , 0.0, 0.0, 1.0, 0.0, 2
 
+	attachRules = 1,0,1,0,0
+
 	fx_gasBurst_white = 0.0, -0.041, 0.0, 0.0, 1.0, 0.0, decouple
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
 
 	TechRequired = unlockParts
 	cost = 150
@@ -26,7 +37,13 @@ PART
 	title = CST-100 Heat Shield
 	manufacturer = Boeing
 	description = The heat shield for CST-100 "Starliner" command module.
-	attachRules = 1,0,1,0,0
+	tags = starliner, boeing, cst100, cst-100, 100
+
+	bulkheadProfiles = size3
+
+	//  ============================================================================
+	//  Thermo, Durability
+	//  ============================================================================
 
 	mass = 0.23
 	dragModelType = default
@@ -38,14 +55,10 @@ PART
 	crashTolerance = 12
 	fuelCrossFeed = False
 	PhysicsSignificance = 0
+	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
 	childStageOffset = 1
-	stagingIcon = DECOUPLER_HOR
-	bulkheadProfiles = size3
 
-	tags = starliner, boeing, cst100, cst-100, 100
-
-	//use new heat shield tagging system to configure the shield instead
 	heatShieldDiameter  = 4.56
 	heatShieldTag = LEO
 	resetHeatShieldAblator = true
@@ -53,6 +66,10 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
+
+	//  ============================================================================
+	//  Modules and Resources
+	//  ============================================================================
 
 	MODULE
 	{
