--- a/GameData/ROCapsules/PartConfigs/CST/CSTNDSActive.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNDSActive.cfg
@@ -3,20 +3,31 @@ PART
 	name = ROC-CSTNDSActive
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
+
 	RSSROConfig = True
-	
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/nds/NDS3/ndsport3
 	}
-	
+
 	scale = 1.0
 	rescaleFactor = 0.62
-	
+
 	node_stack_top = 0.0, 0.336, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, 0.0
-	
+
+	attachRules = 1,1,1,1,0
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
@@ -25,8 +36,14 @@ PART
 	title = NASA Docking System (Active)
 	manufacturer = Boeing
 	description = The NASA Docking System (NDS) is a spacecraft docking and berthing mechanism for US human spaceflight vehicles, such as the Orion Multi-Purpose Crew Vehicle and the Commercial Crew vehicles.
-	attachRules = 1,1,1,1,0
-	
+	tags = starliner, boeing, cst100, cst-100, 100, nasa docking system, nds
+
+	bulkheadProfiles = size1, srf
+
+	//  ============================================================================
+	//  Thermo, Durability
+	//  ============================================================================
+
 	mass = 0.2
 	dragModelType = default
 	maximum_drag = 0.25
@@ -40,10 +57,11 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
-	bulkheadProfiles = size1, srf
-	
-	tags = starliner, boeing, cst100, cst-100, 100, nasa docking system, nds
-	
+
+	//  ============================================================================
+	//  Modules and Resources
+	//  ============================================================================
+
 	MODULE
 	{
 		name = ModuleDockingNode
@@ -63,7 +81,6 @@ PART
 		undockEjectionForce = 0.1
 		stagingEnabled = False
 	}
-
 }
 
 @PART[ROC-CSTNDSActive]:AFTER[FerramAerospaceResearch]
