--- a/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
@@ -3,22 +3,33 @@ PART
 	name = ROC-CSTNoseCone
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
+
 	RSSROConfig = True
-	
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/noseCone/CST101_CAP
 		//scale = 1.67, 1.67, 1.67
 	}
-	
+
 	scale = 1
 	rescaleFactor = 2.15
-	
+
 	node_stack_bottom = 0.0, 0.09535, 0.0, 0.0, -1.0, 0.0, 1
-	
+
+	attachRules = 1,0,1,1,1
+
 	fx_gasBurst_white = 0.0, -0.09535, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
-	
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
@@ -27,8 +38,14 @@ PART
 	title = CST-100 Nose Cone
 	manufacturer = Boeing
 	description = A protective nose cone for the NASA Docking System of the CST-100 Starliner.
-	attachRules = 1,0,1,1,1
-	
+	tags = starliner, boeing, cst100, cst-100, 100
+
+	bulkheadProfiles = size1
+
+	//  ============================================================================
+	//  Thermo, Durability
+	//  ============================================================================
+
 	mass = 0.1
 	dragModelType = default
 	maximum_drag = 0.1
@@ -42,15 +59,16 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
+	stagingIcon = DECOUPLER_HOR
 	fuelCrossFeed = False
 	PhysicsSignificance = 0
 	stageOffset = 1
 	chilStageOffset = 1
-	stagingIcon = DECOUPLER_HOR
-	bulkheadProfiles = size1
-	
-	tags = starliner, boeing, cst100, cst-100, 100
-	
+
+	//  ============================================================================
+	//  Modules and Resources
+	//  ============================================================================
+
 	MODULE
 	{
 		name = ModuleDecouple
