--- a/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
@@ -3,21 +3,33 @@ PART
 	name = ROC-CSTSM
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
+
 	RSSROConfig = True
-	
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/serviceModule/model
 	}
-	
+
 	scale = 1.0
 	rescaleFactor = 1.24
-	
+
 	node_stack_top = 0.0, 0.273, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -1.15, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_engine = 0.0, -0.75, 0.0, 0.0, -1.0, 0.0, 1
+
+	attachRules = 1,1,1,1,0
+
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
-	
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
@@ -27,8 +39,14 @@ PART
 	title = CST-100 Service Module
 	manufacturer = Boeing
 	description = The service module for the CST-100 "Starliner" spacecraft.
-	attachRules = 1,1,1,1,0
-	
+	tags = starliner, boeing, cst100, cst-100, 100
+
+	bulkheadProfiles = size1, size3
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 3.89
 	dragModelType = default
 	maximum_drag = 0.2
@@ -40,13 +58,14 @@ PART
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
 	fuelCrossFeed = True
-	bulkheadProfiles = size1, size3
 	emissiveConstant = 0.6 // not too absorptive for reentry
     thermalMassModifier = 1.0
     skinMassPerArea = 2.0
 	radiatorHeadroom = 0.5
-	
-	tags = starliner, boeing, cst100, cst-100, 100
+
+	//  ============================================================================
+	//  Animations and Textures
+	//  ============================================================================
 
 	EFFECTS
 	{
@@ -79,6 +98,10 @@ PART
 		}
 	}
 
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
 	MODULE
 	{
 		name = ModuleDecouple
@@ -87,7 +110,7 @@ PART
 		isOmniDecoupler = false
 		explosiveNodeID = top
 	}
-	
+
 	MODULE
 	{
 		name = ModuleRCSFX
@@ -115,7 +138,7 @@ PART
 			key = 1 110
 		}
 	}
-	
+
 	MODULE
 	{
 		name = ModuleDeployableSolarPanel
@@ -126,7 +149,7 @@ PART
 		resourceName = ElectricCharge
 		chargeRate = 3.0
 	}
-	
+
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -171,4 +194,3 @@ PART
 		}
 	}
 }
-
