--- a/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
@@ -3,28 +3,59 @@ PART
 	name = ROC-CSTRS88
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
-	RSSROConfig = True
-	
+
+	category = Engine
+	subcategory = 0
+	RSSROConfig = true
+	RP0conf = true
+
+	crashTolerance = 10
+	maxTemp = 673.15
+	skinTemp = 773.15
+	fuelCrossfeed = true
+	breakingForce = 10000
+	breakingTorque = 10000
+
+	engineType = RS88
+	engineTypeMult = 4
+	massOffset = 0
+	ignoreMass = False
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/RS88/model
 	}
-	
+
 	rescaleFactor = 1.24
 	scale = 1.0
-	
+
 	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1
-	
+
+	attachRules = 1,0,1,0,0
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
 	category = Engine
-	subcategory = 0
 	title = RS-88
 	manufacturer = Boeing
 	description = abc
-	attachRules = 1,0,1,0,0
-	
+	tags = starliner, boeing, cst100, cst-100, 100, rs88, rs-88, 88
+
+	bulkheadProfiles = size1
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 1.0
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.8 // engine nozzles are good at radiating.
@@ -32,22 +63,14 @@ PART
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 10
-	maxTemp = 573.15
-	skinMaxTemp = 673.15
+	stagingIcon = LIQUID_ENGINE
 	stageOffset = 1
 	chileStageOffset = 1
-	stagingIcon = LIQUID_ENGINE
-	bulkheadProfiles = size1
-	
-	tags = starliner, boeing, cst100, cst-100, 100, rs88, rs-88, 88
-	
-	engineType = RS88
-	engineTypeMult = 4
-	massOffset = 0
-	ignoreMass = False
-	
-	
+
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
 	MODULE
 	{
 		name = ModuleEnginesRF
@@ -69,5 +92,40 @@ PART
 		}
 
 		!CONFIG,*:HAS[~name[LAE]]{}
+	}
+}
+
+//	============================================================================
+//	CST RealPlume Support
+//	============================================================================
+
+@PART[ROC-CSTRS88]:NEEDS[RealPlume]:BEFORE[RealPlume]
+{
+	PLUME
+	{
+		name = Hypergolic_LowerOrangeShock
+		transformName = thrustTransform
+		localRotation = 0,0,0
+		localPosition = 0,0,0
+		fixedScale = 1.0
+		energy = 1
+		speed = 1
+
+		flarePosition = 0,0,0.0
+		flareScale = 0.12
+
+		plumePosition = 0,0,1.8
+		plumeScale = 0.9
+
+		fumePosition = 0,0,2.5
+		fumeScale = 1.0
+
+		blazePosition = 0,0,1.5
+		blazeScale = 0.8
+	}
+
+	@MODULE[ModuleEnginesRF]
+	{
+		%powerEffectName = Hypergolic_LowerOrangeShock
 	}
 }
