Add the TAC heatshield patch

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
@@ -574,3 +574,12 @@ PART
 		RFBand = S		//Default to S-band
 	}
 }
+
+//	================================================================================
+//	Final Pass to Make Sure TAC does not add extra resources
+//	================================================================================
+
+@PART[ROC-ApolloCMBlockIII]:LAST[ROCapsules]
+{
+	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
+}
