Add the TAC heatshield patch

--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
@@ -257,3 +257,12 @@ PART
 		}
 	}
 }
+
+//	================================================================================
+//	Final Pass to Make Sure TAC does not add extra resources
+//	================================================================================
+
+@PART[ROC-VoskhodCapsule]:LAST[ROCapsules]
+{
+	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
+}
