--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -255,3 +255,12 @@ PART
 		}
 	}
 }
+
+//	================================================================================
+//	Final Pass to Make Sure TAC does not add extra resources
+//	================================================================================
+
+@PART[ROC-VostokCapsule]:LAST[ROCapsules]
+{
+	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
+}
